// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActiveLink> should render a link 1`] = `
<div>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-16xlzhx-MuiTypography-root-MuiLink-root"
  >
    Some test link
  </a>
</div>
`;

exports[`<ActiveLink> should render active on the current path 1`] = `
<div>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1btypaa-MuiTypography-root-MuiLink-root"
  >
    Some test link
  </a>
</div>
`;

exports[`<ActiveLink> should render disabled link 1`] = `
<div>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-4xwktl-MuiTypography-root-MuiLink-root"
  >
    Some test link
  </a>
</div>
`;
